---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.XX
  Features:
    - Moved to Factorio 1.1
    - Added big chests and logistic chests from Angel's Industries
    - Added warehouses and logistic warehouses,from Angel's Addons - Storage Options
  Changes:
    - Adjusted handling of Bob's electronics related recipes due to changes in Artisanal Reskins: Bob's Mods
    - Adjusted `drawing_box` for several structures
  Locale:
    - Updated German localizations
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020.11.08
  Features:
    - Implemented the advanced gas refinery
    - Added settings to use Angel's material colors for pipes and intermediaries (default on)
    - Added icon for "Glowing hot iron plate"
    - Now reskins plate recipes for lead and tin when Angel's Smelting is not present
    - Now reskins "Metallurgy smelting 5" technology
  Changes:
    - Changed how default indicators for true/false setting descriptions are handled internally
    - Changed to refer to Angel's Smelting graphics where possible to reduce mod size; now dependent on Angel's Smelting version 0.6.12+
    - Changed the progression tiers of the chemical furnace from 1-4 to 2-5 to reflect changes in Angel's Smelting
    - Removed progression tiers from the powder mixer (now tier 1-4 in all cases) to reflect changes in Angel's Smelting
  Bugfixes:
    - Fixed that the recipes "Glowing hot iron plate" and "Steel plate" had improper icons due to recent updates in Angel's Smelting
  Locale:
    - Modified setting names and descriptions for consistency
    - Updated Czech and German localizations, added Brazilian Portuguese localization
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.10.04
  Features: