@@ -120,80 +120,6 @@ for name, map in pairs(tier_map) do
         }
     }
 
-    entity.working_visualisations = {
-        -- Fire effect
-        {
-            north_position = {0, 0},
-            east_position = {0, 0},
-            south_position = {0, 0},
-            west_position = {0, 0},
-            light = {intensity = 1, size = 2, color = {r = 1.0, g = 1.0, b = 1.0}, shift = util.by_pixel(7, 38)},
-            animation = {
-                filename = "__angelssmelting__/graphics/entity/blast-furnace/blast-furnace-fire.png",
-                priority = "high",
-                width = 12,
-                height = 25,
-                line_length = 8,
-                frame_count = 48,
-                animation_speed = 0.5,
-                shift = util.by_pixel(4, 29),
-                hr_version = {
-                    filename = "__angelssmelting__/graphics/entity/blast-furnace/hr-blast-furnace-fire.png",
-                    priority = "high",
-                    width = 23,
-                    height = 50,
-                    line_length = 8,
-                    frame_count = 48,
-                    animation_speed = 0.5,
-                    shift = util.by_pixel(3, 29),
-                    scale = 0.5,
-                }
-            },
-        },
-        -- Glow
-        {
-            north_position = {0, 0},
-            east_position = {0, 0},
-            south_position = {0, 0},
-            west_position = {0, 0},
-            effect = "flicker",
-            animation = {
-                filename = "__base__/graphics/entity/steel-furnace/steel-furnace-glow.png",
-                priority = "high",
-                width = 60,
-                height = 43,
-                blend_mode = "additive",
-                shift = util.by_pixel(4, 37.5),
-                scale = 0.75,
-            }
-        },
-        -- Working Lights
-        {
-            north_position = {0, 0},
-            east_position = {0, 0},
-            south_position = {0, 0},
-            west_position = {0, 0},
-            effect = "flicker",
-            animation = {
-                filename = "__angelssmelting__/graphics/entity/blast-furnace/blast-furnace-working-light.png",
-                priority = "high",
-                width = 17,
-                height = 20,
-                blend_mode = "additive",
-                shift = util.by_pixel(4.5, 40),
-                hr_version = {
-                    filename = "__angelssmelting__/graphics/entity/blast-furnace/hr-blast-furnace-working-light.png",
-                    priority = "high",
-                    width = 34,
-                    height = 40,
-                    blend_mode = "additive",
-                    shift = util.by_pixel(4.5, 40),
-                    scale = 0.5,
-                }
-            }
-        }
-    }
-
     -- Label to skip to next iteration
     ::continue::
 end
