@@ -4,10 +4,12 @@ Date: 2020.11.XX
   Features:
     - Moved to Factorio 1.1
     - Added big chests and logistic chests from Angel's Industries
-    - Added warehouses and logistic warehouses,from Angel's Addons - Storage Options
+    - Added warehouses and logistic warehouses from Angel's Addons - Storage Options
   Changes:
     - Adjusted handling of Bob's electronics related recipes due to changes in Artisanal Reskins: Bob's Mods
     - Adjusted `drawing_box` for several structures
+    - Reworked how `working_visualisations` is handled for the strand casting machine
+    - Removed defines for `working_visualisations` for the blast furnace and casting machine
   Locale:
     - Updated German localizations
 ---------------------------------------------------------------------------------------------------
